# f2-nerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main_inference.cpp  main_localization.cpp  runtime_config1.yaml
confs/: my_config.yaml  my_dataset.yaml  wanjinyou.yaml
confs/dataset/: default.yaml
confs/field/: hash3d_anchored.yaml
confs/pts_sampler/: perspective.yaml
confs/shader/: sh_shader.yaml
confs/train/: 10k.yaml  20k.yaml  50k.yaml
docker/: Dockerfile  README.md  docker-compose.yml
ros2/: .gitignore  runtime_config1.yaml  runtime_config_awsim.yaml  runtime_config_kashiwa.yaml  tips.md
ros2/my_image_proc/: launch.sh
ros2/my_image_proc/src/: cv_decompress.hpp
ros2/pose_and_image_publisher/: build_and_exec.sh
ros2/pose_and_image_publisher/pose_and_image_publisher/: main.py
ros2/python/: analyze_particles_log.py  analyze_ros2_log.py  compare_echoed_trajectories.py  concat_test_images_result.py  modified_offset_by_particles_log.py
ros2/ros2-f2-nerf/: CMakeLists.txt  check.sh  launch.sh  package.xml
ros2/ros2-f2-nerf/src/: localizer_core.cpp  localizer_core.hpp  main.cpp  nerf_based_localizer.cpp  nerf_based_localizer.hpp
ros2/script/: check.sh  exec_log_sim_and_evaluation.sh  launch_my_image_decompressor.sh  launch_my_image_proc.sh  launch_nerf_based_localizer.sh  launch_pose_and_image_publisher.sh  launch_pose_reflector.sh  launch_rosbag.sh  regression_test.sh
ros2/src/my_image_decompressor/: CMakeLists.txt  package.xml
ros2/src/my_image_decompressor/src/: my_image_decompressor.cpp
ros2/src/my_image_proc/: CMakeLists.txt  package.xml
ros2/src/my_image_proc/src/: cv_decompress.cpp  cv_decompress.hpp  timer.hpp  undistort_node.cpp
ros2/src/pose_and_image_publisher/: package.xml  setup.cfg  setup.py
ros2/src/pose_and_image_publisher/pose_and_image_publisher/: main.py
ros2/src/pose_reflector/: package.xml  setup.cfg  setup.py
ros2/src/pose_reflector/pose_reflector/: main.py
ros2/src/ros2-f2-nerf/: CMakeLists.txt  package.xml
ros2/src/ros2-f2-nerf/config/: parameters.yaml  parameters1.yaml  parameters_awsim.yaml  parameters_kashiwa.yaml
ros2/src/ros2-f2-nerf/src/: localizer_core.cpp  localizer_core.hpp  nerf_based_localizer.cpp  nerf_based_localizer.hpp  timer.hpp
ros2/src/ros2-f2-nerf/test/: test_localizer_core.cpp
ros2/unit_tool/: CMakeLists.txt
ros2/unit_tool/src/: main.cpp
scripts/: add_split_npy.py  analyze_inference_result.py  build_and_exec_inference.sh  build_and_exec_test.sh  build_and_exec_training.sh  build_and_exec_walk.sh  build_and_run.sh  check_npy.py  colmap2poses.py  compare_train_result.py  concat_inference_images.py  concat_test_images_result.py  convert_pose_tsv_to_colmap_format.py  convert_pose_tsv_to_f2_format.py  crop_images.py  download_vocabulary_tree_32k.sh  extract_multi_view_images_from_rosbag.py  full_test.sh  interpolate.py  local_colmap_and_resize.sh  make_movie_inference.py  match_two_trajectories.py  parse_rosbag_with_time_align.py  plot_camera_meta.py  rectify_images.py  regression_test.sh  resize_images.py  run.py
src/: Common.h  ExpRunner.cpp  ExpRunner.h  Infer.cpp  Infer.hpp  Test.cpp  Test.hpp  TestField.cpp  TestField.hpp  Walk.cpp  Walk.hpp  common.hpp  common_cuda.hpp  dataset.cpp  dataset.hpp  hash_3d_anchored.cpp  hash_3d_anchored.cu  hash_3d_anchored.hpp  localization_executer.cpp  localization_executer.hpp  localizer.cpp  localizer.hpp  main_functions.hpp  points_sampler.cpp  points_sampler.hpp  rays.cpp  rays.hpp  renderer.cpp  renderer.hpp  sh_shader.cpp  sh_shader.cu  sh_shader.hpp  stop_watch.cpp  stop_watch.hpp  train_manager.cpp  train_manager.hpp  utils.cpp  utils.hpp
src/CustomOps/: CustomOps.cpp  CustomOps.cu  CustomOps.hpp  FlexOps.cu  FlexOps.hpp  Scatter.cu  Scatter.hpp
src/Dataset/: Dataset.cpp  Dataset.cu  Dataset.h  dataset.cmake
src/Field/: Field.h  FieldFactory.cpp  FieldFactory.h  GridEncoder.cpp  GridEncoder.hpp  Hash3DAnchored.cpp  Hash3DAnchored.cu  Hash3DAnchored.h  TCNNWP.cpp  TCNNWP.h  field.cmake
src/PtsSampler/: PersSampler.cpp  PersSampler.cu  PersSampler.h  PtsSampler.cpp  PtsSampler.h  pts_sampler.cmake
src/Renderer/: Renderer.cpp  Renderer.h  renderer.cmake
src/Shader/: SHShader.cpp  SHShader.cu  SHShader.h  Shader.h  ShaderFactory.cpp  ShaderFactory.h  shader.cmake
src/Utils/: GlobalDataPool.cpp  GlobalDataPool.h  ImageIO.cpp  Pipe.cpp  Pipe.h  utils.cmake
src/Utils/CustomOps/: CustomOps.cu  FlexOps.cu  Scatter.cu
src/dataset/: dataset.cmake  dataset.cpp  dataset.hpp
src/field/: field.cmake  hash_3d_anchored.cpp  hash_3d_anchored.cu  hash_3d_anchored.hpp
src/localizer/: localizer.cmake  localizer.cpp  localizer.hpp
src/main_functions/: Infer.cpp  Test.cpp  TestField.cpp  Walk.cpp  infer.cpp  main_functions.hpp  test.cpp  train_manager.cpp  train_manager.hpp  walk.cpp
src/points_sampler/: points_sampler.cmake  points_sampler.cpp  points_sampler.hpp
src/renderer/: renderer.cmake  renderer.cpp  renderer.hpp
src/shader/: sh_shader.cpp  sh_shader.cu  sh_shader.hpp  shader.cmake
src/utils/: stop_watch.cpp  stop_watch.hpp  utils.cmake  utils.cpp  utils.hpp
src/utils/CustomOps/: CustomOps.cu  FlexOps.cpp  FlexOps.hpp  Scatter.cpp  Scatter.cu  Scatter.hpp
unit_tool/: CMakeLists.txt  README.md
unit_tool/script/: build_and_exec.sh
unit_tool/src/: main.cpp
